# new-jk-web-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: main.py
backend/src/app/core/: security.py  settings.py
backend/src/app/crud/: login.py  user.py
backend/src/app/db/: schemas.py
backend/src/app/repositories/: __init__.py  base.py  booking.py  favorite.py  notification.py  poe.py  review.py  route.py  tour.py  user.py
backend/src/app/scripts/: seed_demo_data.py
backend/src/app/service/: base.py  booking.py  favorite.py  login.py  notification.py  poe.py  review.py  route.py  tour.py  user.py
backend/src/app/utils/: emails.py  logging.py
backend/src/migrations/versions/: 2a0b7ef5f0d1_poe_and_routes.py  3c4f8a91b7d2_tours_bookings.py  4d67b9c2e8a0_booking_idempotency_key.py  5b1f2d6e3a91_reviews_and_ratings.py  6ef68d97dbd6_nulls_and_new_column.py  7a9c3f1d2e4b_stage1_user_features.py  82b4a27c811f_preprocessed_email.py  8b0d1e2f3a4c_tour_status.py  9f2a1c7d4b6e_guide_profiles.py  a4b1d9c8e2f0_admin_user_moderation.py  a9b8c7d6e5f4_notifications.py  b1c2d3e4f5a6_fk_ondelete_cascade.py  (+7 more)
backend/tests/: conftest.py  test_api_new_endpoints_smoke.py  test_booking_service.py  test_favorite_service.py  test_logging.py  test_notification_service.py  test_poe_service.py  test_review_service.py  test_route_service.py  test_tour_service.py  test_user_dependencies.py  test_user_service.py
(+156 files in other folders)
